--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,11 @@ jobs:
 
       - name: Build
         run: |
-          
+          cd presskit
+          hugo --minify
+          mkdir ../presskit-dist
+          mv public ../presskit-dist/presskit
+          cd ..
           hugo --minify
 
       - name: Deploy
