--- a/config.yaml
+++ b/config.yaml
@@ -36,7 +36,7 @@ minify:
 params:
   env: production
   title: Exilland
-  description: "Exilland Indie Game Development Studio"
+  description: "Exilland Games"
 
   images: ExillandFullLogo.png
 
